comienzo de generación de reportes