@@ -16,12 +16,13 @@ import com.itec1.e_commerce.entities.Client;
 import com.itec1.e_commerce.entities.DetailOrder;
 import com.itec1.e_commerce.entities.Invoice;
 import com.itec1.e_commerce.entities.Order;
+import com.itec1.e_commerce.entities.Product;
 import com.itec1.e_commerce.entities.Sector;
 import com.itec1.e_commerce.entities.State;
 import com.itec1.e_commerce.entities.TrackingOrder;
 import com.itec1.e_commerce.entities.Warehouse;
+import java.util.ArrayList;
 
-import javax.persistence.EntityManagerFactory;
 import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -76,24 +77,23 @@ public class OrderServiceImpl {
     }
 
     public List<Order> findOrdersByClient(Client orderByClient) {
-        return orderJpaController.findOrderEntities().stream()
-                .filter(order -> order.getClient().getId()
-                .equals(orderByClient.getId()))
-                .collect(Collectors.toList());
+        return findAll().stream().filter(order -> order.getClient().getId()
+                .equals(orderByClient.getId())).toList();
     }
 
     public List<Order> findOrdersBySector(Sector orderBySector) {
-        return orderJpaController.findOrderEntities().stream()
-                .filter(order -> order.getSector().getId()
-                .equals(orderBySector.getId()))
-                .collect(Collectors.toList());
+        return findAll().stream().filter(order -> order.getSector().getId()
+                .equals(orderBySector.getId())).toList();
     }
 
     public List<Order> findOrdersByWarehouse(Warehouse orderByWarehouse) {
-        return orderJpaController.findOrderEntities().stream()
-                .filter(order -> order.getSector().getWarehouse().getId()
-                .equals(orderByWarehouse.getId()))
-                .collect(Collectors.toList());
+        return findAll().stream().filter(order -> order.getSector().getWarehouse().getId()
+                .equals(orderByWarehouse.getId())).toList();
+    }
+    
+    public List<DetailOrder> viewDetailOfOrder (Order order) {
+        return detailOrderJpaController.findDetailOrderEntities().stream().
+                filter(detail -> detail.getOrder().equals(order)).toList();
     }
 
     public TrackingOrder createTrackingOrder(TrackingOrder entity) {
